--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,40 @@
 body {
     background-color: rgb(37, 37, 37);
     color: floralwhite;
+    
+}
+
+a{
+    color: rgb(194, 194, 194);
+    text-decoration: none;
+}
+
+#content_pane{
+    text-align: center;
+}
+
+ul{
+    text-align: center;
+    list-style-type: none;
+    border-style: outset;
+    padding: 10px;
+
+}
+
+h1{
+    text-align: center;
+}
+
+h3{
+    text-align: center;
+    font-size: small;
+}
+
+.column.side{
+    width: 15%;
+}
+
+.column.middle{
+    width: 85%;
+    
 }
