--- a/v2/styles/style.css
+++ b/v2/styles/style.css
@@ -7,7 +7,6 @@ higher contrast: #92B2D6
 */
 
 header{
-    font-size: 30px;
     text-align: center;
 }
 
@@ -18,30 +17,35 @@ body{
 
 div{
     width: 80%;
+    max-width: 1200px;
     margin: 0 auto;
-    align-self: center;
+    align-content: center;
     padding: 5px;
+    /*border: 2px solid greenyellow;*/
 }
 
-nav{
-    
+
+
+ul{
+    display: inline-flex;
+    justify-content: space-around;
+    margin: 0 auto;
+    list-style: none;
 }
 
 img {
     max-width: 80%;
     margin: auto;
+    margin-top: 20px;
     display: block;
-    filter: blur(2px);
-    
+    /*filter: blur(2px);*/
+    border-radius: 20px 20px 20px 20px;
 }
-
-div{
-    border: 2px solid greenyellow;
-}
-
 
 /*Classes*/
 .header{
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     background-color: #4A4439;
 }
 
@@ -53,10 +57,40 @@ div{
     z-index: 1000;
 }
 
+.navLink:visited, .navLink:link{
+    color:black;
+    font-weight: bold;
+    padding: 2px;
+    text-decoration: none;
+    text-align: center;
+}
+
+
+.navLink:hover{
+    transition-duration: 0.4s;
+    background-color: #5781C9;
+}
+
 .main_content{
     background-color: #92B2D6;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.image{
+    flex: 2;
+    min-width: 350px;
+    max-width: 350px;
+}
+
+.paragraph{
+    flex: 1;
+    min-width: 200px;
+    margin: 5px;
 }
 
 .footer{
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
     background-color: #4A4439;
 }
