--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,13 +1,60 @@
 /*Tags*/
+article{
+    
+    border: black 3px solid;
+    padding: 0;
+}
+
+table{
+    display: inline;
+    align-self: center;
+    width: 100%;
+    margin: 0;
+}
+
+table *{
+    margin: 0;
+}
+
+th{
+    border-bottom: solid 2px black;
+}
+
+td{
+    padding: 5px;
+    border-top: 1px solid black;
+}
 
 /*Classes*/
-.prj-grid{
-    display: grid;
-    grid-template-columns: auto auto;
-    width: 100%;
+.left_col{
+    border-right: grey solid 1px;
 }
 
-.prj-item{
-    border: red solid 1px;
+.proj_links{
+    text-decoration: none;
+    color: dodgerblue;
+    font-weight: bold;
+    padding:2px
 }
+
+.proj_links:hover{
+    background-color: rgb(207, 204, 204);
+    transition-duration: 500ms;
+    border-radius: 5px;
+}
+
 /*IDs*/
+#tictactoe{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 150px;
+    border: black solid 3px;
+}
+
+#navibot_logo{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height:150px;
+}
