--- a/styles/projects.css
+++ b/styles/projects.css
@@ -6,8 +6,9 @@ article{
 }
 
 table{
-    display: inline;
-    align-self: center;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
     margin: 0;
 }
