--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,6 +72,7 @@ nav{
 
 .link a:hover{
     color:white;
+    text-shadow: 2px 2px 3px black;
 }
 
 .main_content{
@@ -128,22 +129,3 @@ nav{
     color: black;
 }
 
-#mail{
-    margin: 5px;
-    width: 100%;
-    display: grid;
-    grid-template-areas: 
-    "1 2"
-    "3 "
-    "5"
-    ;
-    grid-row: auto auto;
-}
-
-#mail #subject{
-    grid-area: 2;
-}
-
-#mail label{
-    grid-area: 1;
-}
